# platanus-hack-26-ar-team-29

./: .gitignore  .mcp.json  README.md  docker-compose.yml  patch_chat_agent.py  patch_chat_agent2.py  patch_chat_agent_fallback.py  patch_deps.py  patch_ingestion.py  platanus-hack-project.json  project-description.md  txs.json
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  check_creds.py  check_txs.py  pyproject.toml  seed_wallbit.py  seed_wallbit_dev.py  test_wallbit.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_mvp.py  0002_eth_custodial_constraints.py  0002_ethereum_custodial_constraints.py  774f440cf2aa_add_ledger_models_and_userprofile.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  approval.py  chat_agent.py  classifier_agent.py  cli.py  defi_tools.py  ethereum_tools.py  events.py  interactions.py  plan_executor.py  tool_dispatcher.py  ui_tools.py  wallbit_tools.py
backend/app/ai/: anthropic.py
backend/app/api/: __init__.py  deps.py
backend/app/canonical/: models.py
backend/app/common/: errors.py  logging.py
backend/app/persistence/: crypto.py  session.py
backend/docs/: README.md  architecture.md  defi.md  deviations.md  ethereum_custodial.md  testing.md  wallbit_api.md
backend/tests/: conftest.py  test_agent_approval.py  test_agent_events.py  test_auth.py  test_chat_smoke.py  test_connections_ethereum_custodial.py  test_defi_unit.py  test_ethereum_credentials.py  test_health.py  test_plan_smoke.py  test_wallbit_adapter.py  test_ws_smoke.py
frontend/: .gitignore  (+7 more)
(+123 files in other folders)
