[project]
name = "pampa-backend"
version = "0.1.0"
description = "Backend for the Pampa agentic-finance app (Platanus Hack 26)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.27",
    "anthropic>=0.40",
    "web3>=7.5",
    "cryptography>=43",
    "python-multipart>=0.0.17",
    "structlog>=24.4",
    "claude-agent-sdk>=0.1.80",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
# B008: Depends/Query in defaults is the FastAPI idiom.
# SIM105: try/except/pass during teardown is intentional.
ignore = ["E501", "B008", "SIM105"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
